Added new write to file method in FilHandler. Made new csv file. Added writeToFile method in addGrocery method in UserInterfaceMethods (It works. The grocerys are added to the file). Made quantity as a double (it was int).